3.7.1.0/TRANSLATION_STATUS.md
# Translation Status (3.7.1.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Rebuilt in place: existing translations for this version are preserved, and any strings still marked `untranslated` remain so (they fall back to English until translated).

- Total strings (both projects): 473
- Generated: 2026-07-13 23:42:51 +08:00

Jump to: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 450 | 23 | 95% |
| ru-RU | 473 | 0 | 100% |
| tr-TR | 473 | 0 | 100% |

## Project: OmniConsole

Strings: 451

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 433 | 18 | 96% |
| ru-RU | 451 | 0 | 100% |
| tr-TR | 451 | 0 | 100% |

## Project: OmniConsole.PhantomLink

Strings: 22

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 17 | 5 | 77% |
| ru-RU | 22 | 0 | 100% |
| tr-TR | 22 | 0 | 100% |

## Untranslated keys

### es-ES

**OmniConsole**

Changed (re-translate) (18):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

**OmniConsole.PhantomLink**

Changed (re-translate) (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`

### ru-RU

_All translated._

### tr-TR

_All translated._
